--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.0",
     "next-images": "^1.8.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
